--- a/src/main/resources/application-override.yml
+++ b/src/main/resources/application-override.yml
@@ -33,7 +33,7 @@ platform:
         atomikos:
           use: false #마이크로서비스 모드에서 각 서비스가 개별 DB를 가지고 있을 때 이기종 DB 간 트랜잭션을 처리할 때만 사용한다. 모놀리틱 모드에서는 false 로 셋팅한다.
     provider:
-      search: querydsl #bootstrap.yml 의 값이 항상 오버라이드 되기 때문에 이 값은 별 의미가 없다.
+      search: hibernate #bootstrap.yml 의 값이 항상 오버라이드 되기 때문에 이 값은 별 의미가 없다.
       cache: redis #redis 캐시를 반드시 사용한다.
       elastic: true #spring data elastic search 를 사용할 때만 이 값을 활성화 한다.
       kafka: false #마이크로서비스 모드에서 카프카 데이터 동기화를 사용할 경우 이 값을 true 로 한다.
