--- a/src/main/resources/redisson-dev.yml
+++ b/src/main/resources/redisson-dev.yml
@@ -1,3 +1,3 @@
 singleServerConfig:
-  password: #REDIS PASSWORD
-  address: #REDIS IP
+  password: "rcm-pwd01"
+  address: "redis://3.34.51.245:6379"
