--- a/src/main/resources/service-properties/micro-commerce-catalog/application.yml
+++ b/src/main/resources/service-properties/micro-commerce-catalog/application.yml
@@ -3,10 +3,10 @@ spring:
     rcm-rdb:
       catalog:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: jdbc:mysql://DB_ADDRESS:DB_PORT/mc_catalog?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
-        password: 
-        url: jdbc:mysql://DB_ADDRESS:DB_PORT/mc_catalog?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
-        username: 
+        jdbc-url: jdbc:mysql://152.69.231.63:3306/mc_catalog?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
+        password: rcm-pwd01
+        url: jdbc:mysql://152.69.231.63:3306/mc_catalog?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
+        username: rcm-client
         hibernate:
           cache:
             use_query_cache: true
@@ -98,10 +98,10 @@ spring:
           show_sql: true
     rcm-mongo: # for override spring.data.mongodb.* values each at services
       catalog:
-        connectionString: mongodb+srv://MONGO_CLIENT_ID:MONGO_CLIENT_PASSWORD@MONGODB_ADDRESS/rcm-catalog?retryWrites=true&w=majority&connecttimeoutms=10000&sockettimeoutms=15000&waitqueuetimeoutms=3000&maxlifetimems=60000&maxlifetimems=120000&heartbeatfrequencyms=20000&ssl=true
+        connectionString: mongodb+srv://rcm-mongo-client:rcm-pwd@cluster0.gyh5s.mongodb.net/rcm-catalog?retryWrites=true&w=majority&connecttimeoutms=10000&sockettimeoutms=15000&waitqueuetimeoutms=3000&maxlifetimems=60000&maxlifetimems=120000&heartbeatfrequencyms=20000&ssl=true
         database: rcm-catalog
-        username: 
-        password: 
+        username: rcm-mongo-client
+        password: rcm-pwd
         retryWrite: true
         authSource: admin
   application:
