--- a/src/main/resources/service-properties/micro-tenant/local.yml
+++ b/src/main/resources/service-properties/micro-tenant/local.yml
@@ -3,10 +3,10 @@ spring:
     rcm-rdb:
       tenant:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: jdbc:mysql://DB_ADDRESS:DB_PORT/mc_tenant?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
-        password: 
-        url: jdbc:mysql://DB_ADDRESS:DB_PORT/mc_tenant?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
-        username: 
+        jdbc-url: jdbc:mysql://152.69.231.63:3306/mc_tenant?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
+        password: rcm-pwd01
+        url: jdbc:mysql://152.69.231.63:3306/mc_tenant?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
+        username: rcm-client
         hibernate:
           cache:
             use_query_cache: true
